--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -1,10 +1,25 @@
 #################################
+#           Animations          #
+#################################
+animations: true;
+animation-stiffness = 95
+animation-window-mass = 1
+animation-dampening = 12
+animation-clamping = false
+animation-for-open-window = "zoom"; #open window
+animation-for-unmap-window = "slide-down"; #minimize window
+animation-for-workspace-switch-in = "zoom"; #the windows in the workspace that is coming in
+animation-for-workspace-switch-out = "zoom"; #the windows in the workspace that are coming out
+
+#################################
 #             Corners           #
 #################################
-corner-radius = 12;
+corner-radius = 10;
 rounded-corners-exclude = [
   "class_g = 'Rofi'",
   "class_g = 'Polybar'",
+  "window_type = 'dock'",
+  "window_type = 'desktop'"
 ];
 round-borders = 1;
 round-borders-exclude = [
@@ -68,13 +83,14 @@ opacity-rule = [
 
 blur: {
   method = "dual_kawase";
-  strength = 5;
-  deviation =1.0;
+  strength = 6;
+  deviation = 1.0;
   background = false;
   background-frame = false;
   background-fixed = false;
   kern = "3x3box";
 }
+
 
 
 blur-background-exclude = [
@@ -85,27 +101,24 @@ blur-background-exclude = [
 #################################
 #       General Settings        #
 #################################
-
-experimental-backends = false;
 backend = "glx";
-vsync = true;
+vsync = false;
+
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
-detect-rounded-corners = true
+detect-rounded-corners = true;
 detect-client-opacity = true;
-detect-transient = true
-detect-client-leader = true
-use-damage = true
-log-level = "info";
+unredir-if-possible = true
+detect-transient = true;
+glx-no-stencil = true;
+use-damage = true;
+log-level = "warn";
 
-wintypes: {
-  normal = { full-shadow = true; };
-  menu = { full-shadow = true; };
-  tooltip = { fade = true; shadow = false; focus = true;};
-  dock = { shadow = false; };
-  dnd = { shadow = false; };
-  popup_menu = { full-shadow = true; };
-  utility = { full-shadow = true; };
-  toolbar = { full-shadow = true; };
-  notification = { opacity = 1; }
+wintypes:
+{
+  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
+  dock = { shadow = false; clip-shadow-above = true; }
+  dnd = { shadow = false; }
+  popup_menu = { opacity = 0.8; }
+  dropdown_menu = { opacity = 0.8; }
 };
